--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.7.0"
@@ -28,9 +28,9 @@
     "url": "^0.11.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
